--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+attrs==19.3.0
+importlib-metadata==1.5.0
+joblib==0.14.1
+more-itertools==8.2.0
 numpy==1.18.2
-pandas==1.0.2
+packaging==20.3
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.6
+pytest==5.4.1
 python-dateutil==2.8.1
 pytz==2019.3
+scikit-learn==0.22.2.post1
 scipy==1.4.1
 six==1.14.0
+sklearn==0.0
+wcwidth==0.1.9
+zipp==3.1.0
