--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 attrs==19.3.0
+cycler==0.10.0
 importlib-metadata==1.5.0
 joblib==0.14.1
+kiwisolver==1.2.0
+matplotlib==3.2.1
 more-itertools==8.2.0
 numpy==1.18.2
 packaging==20.3
+pandas==1.0.3
 pluggy==0.13.1
 py==1.8.1
 pyparsing==2.4.6
